--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,26 @@ body {
   margin-bottom: 0.5rem;
   margin-left: 30px;
 }
+
+/* ESTILO CONTATO */
+.mapa {
+  grid-column: 2;
+}
+
+.dados {
+  grid-column: 3;
+}
+
+.dados li {
+  margin-bottom: 1rem;
+  font-family: Helvetica, Arial;
+}
+
+.dados li::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 10px;
+  margin-right: 10px;
+  background: #fb5;
+}
