--- a/css/style.css
+++ b/css/style.css
@@ -181,3 +181,16 @@ body {
   margin-right: 10px;
   background: #fb5;
 }
+
+/* ESTILO FOOTER */
+.copy {
+  grid-column: 3 / 5;
+  margin-bottom: 2rem;
+  background: #fb5;
+}
+
+.copy p {
+  padding: 20px;
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: bold;
+}
